--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,49 @@ body {
   background: #2c2c2c;
   position: relative;
   height: 100vh;
+  margin: 0;
+}
+
+footer {
+  background-color: white;
+  min-height: 20vh;
+}
+
+header {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 10vh;
+  position: fixed;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 999;
+  width: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), color-stop(20%, rgba(44, 44, 44, 0.625088)), color-stop(37%, rgba(44, 44, 44, 0.742735)), color-stop(64%, #2c2c2c), to(#2c2c2c));
+  background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 0.625088) 20%, rgba(44, 44, 44, 0.742735) 37%, #2c2c2c 64%, #2c2c2c 100%);
+}
+
+header .logo-header,
+header .header-cta {
+  height: 3vh;
+}
+
+header .logo-header svg,
+header .header-cta svg {
+  height: 100%;
+}
+
+header .cta {
+  top: 0;
+}
+
+header .cta svg {
+  width: 10px;
 }
 
 main * {
@@ -12,6 +55,10 @@ main * {
   color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+main h3 {
+  font-family: "Raleway";
 }
 
 main .middle {
@@ -41,49 +88,6 @@ main h3 {
 main section {
   min-height: 100vh;
   margin-bottom: 30vh;
-}
-
-footer {
-  background-color: white;
-  min-height: 20vh;
-}
-
-header {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  height: 10vh;
-  position: fixed;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  z-index: 999;
-  width: 100%;
-  padding: 2vh 2vw;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), color-stop(20%, rgba(44, 44, 44, 0.625088)), color-stop(37%, rgba(44, 44, 44, 0.742735)), color-stop(64%, #2c2c2c), to(#2c2c2c));
-  background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 0.625088) 20%, rgba(44, 44, 44, 0.742735) 37%, #2c2c2c 64%, #2c2c2c 100%);
-}
-
-header .logo-header,
-header .header-cta {
-  height: 3vh;
-}
-
-header .logo-header svg,
-header .header-cta svg {
-  height: 100%;
-}
-
-header .cta {
-  top: 0;
-}
-
-header .cta svg {
-  width: 10px;
 }
 
 section,
