--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,7 +12,43 @@ body {
   //padding: 2vh 6vw;
   position: relative;
   height: 100vh;
+  margin:0;
 }
+footer {
+  background-color: white;
+  min-height: 20vh;
+}
+header {
+  display: flex !important;
+  flex-direction: row;
+  height: 10vh;
+  position: fixed;
+  justify-content: space-between;
+  z-index: 999;
+  width: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba($gray, 0) 0%,
+    rgba($gray, 0.6250875350140056) 20%,
+    rgba($gray, 0.742734593837535) 37%,
+    rgba($gray, 1) 64%,
+    rgba($gray, 1) 100%
+  );
+  .logo-header,
+  .header-cta {
+    height: 3vh;
+    svg {
+      height: 100%;
+    }
+  }
+  .cta {
+    top: 0;
+    svg {
+      width: 10px;
+    }
+  }
+}
+
 main {
   * {
     margin: 0;
@@ -22,7 +58,9 @@ main {
     color: $font;
     box-sizing: border-box;
   }
-
+ h3{
+   font-family: "Raleway";
+ }
 
   .middle {
     color: #1d71b8;
@@ -48,41 +86,6 @@ main {
   section {
     min-height: 100vh;
     margin-bottom: 30vh;
-  }
-}
-footer {
-  background-color: white;
-  min-height: 20vh;
-}
-header {
-  display: flex !important;
-  flex-direction: row;
-  height: 10vh;
-  position: fixed;
-  justify-content: space-between;
-  z-index: 999;
-  width: 100%;
-  padding: 2vh 2vw;
-  background: linear-gradient(
-    0deg,
-    rgba($gray, 0) 0%,
-    rgba($gray, 0.6250875350140056) 20%,
-    rgba($gray, 0.742734593837535) 37%,
-    rgba($gray, 1) 64%,
-    rgba($gray, 1) 100%
-  );
-  .logo-header,
-  .header-cta {
-    height: 3vh;
-    svg {
-      height: 100%;
-    }
-  }
-  .cta {
-    top: 0;
-    svg {
-      width: 10px;
-    }
   }
 }
 
